2007-12-02  Changwoo Ryu  <cwryu@debian.org>

	* docs/Makefile.am (DOC_LINGUAS): Added ko.
	* docs/ko/ko.po: gnome-doc-utils migration from the old Sun
	manual. And updated Korean translation.
	* docs/ko/*.xml: Removed old XMLs.
	* docs/ko/figures/*.png: Removed old images.

2007-11-16  Callum McKenzie  <callum@spooky-possum.org>

	* acpi-linux.c: Replace a set of bad calls to strcat with
	g_strconcat. Patch from Tom Parker (Bug #434436). This should stop
	a set of crashed when the HAL daemon isn't running and we try and
	interrogate the /proc/acpi tree directly.

2007-10-13  Callum McKenzie  <callum@spooky-possum.org>

	* battstat-hal.c (battstat_hal_initialise): Allow translation of
	error messages (patch from Takao Fujiwara, Bug #460083).

2007-07-31  Daniel Nylander <po@danielnylander.se>

	* docs/sv/sv.po: Updated Swedish translation.
	
2007-07-17  Jaap Haitsma <jaap@haitsma.org>

	* GNOME_BattstatApplet.xml: use gtk-about i.s.o. gnome-stock-about
	Fixes bug #456955

	* battstat.h:
	* battstat_applet.c: (update_tooltip), (destroy_applet),
	(about_cb), (create_layout), (battstat_applet_fill): 
	Use g_set_application name such that the application name
	gets shown correctly in the about dialog. Convert usage of GtkTooltips
	to new tooltips API of GTK 2.12 Fixes bug #457145

2007-06-28  Daniel Drake  <dsd@gentoo.org>

	* acpi-linux.c: 2.6.21 compatibility fix (based on patch by Alan
	Swanson). Also improved error passing/handling. (#427562)

2007-02-10  AP Singh Alam  <aalam@users.sf.net>

	* docs/pa/pa.po: Punjabi is added
	* docs/Makefile.am: Punjabi (pa) is added

2007-01-30  Kjartan Maraas  <kmaraas@gnome.org>

	* power-management.c: (power_management_initialise):
	Don't mix declarations and code.

2007-01-25  David Lodge <dave@cirt.net>

	* docs/en_GB/en_GB.po: Added English (British) translation
	* docs/Makefile.am: Added en_GB to DOCS_LINGUAS

2006-11-15  Kjartan Maraas  <kmaraas@gnome.org>

	* docs/C/battstat.xml: Added role=maintainer.