@@ -18,7 +18,7 @@
 	<type>bool</type>
 	<locale name="C">
 	  <short>Warn on low time rather than low percentage</short>
-	  <long>Use the value defined in red_value as a time remaining to show the warning dialog rather than a percentage</long>
+	  <long>Use the value defined in red_value as a time remaining to show the warning dialog rather than a percentage.</long>
 	</locale>
       </schema>
 
@@ -29,7 +29,7 @@
         <default>true</default>
         <locale name="C">
 	  <short>Low Battery Notification</short>
-          <long>Notify user when the battery is low</long>
+          <long>Notify user when the battery is low.</long>
         </locale>
       </schema>
 
@@ -40,7 +40,7 @@
         <default>false</default>
         <locale name="C">
 	  <short>Full Battery Notification</short>
-          <long>Notify user when the battery is full</long>
+          <long>Notify user when the battery is full.</long>
         </locale>
       </schema>      
 
@@ -51,7 +51,7 @@
         <default>false</default>
         <locale name="C">
 	  <short>Beep for warnings</short>
-          <long>Beep when displaying a warning</long>
+          <long>Beep when displaying a warning.</long>
         </locale>
       </schema>      
                       
@@ -73,7 +73,7 @@
         <default>true</default>
         <locale name="C">
 	  <short>Upright (small) battery</short>
-          <long>Show the upright, smaller battery on the panel</long>
+          <long>Show the upright, smaller battery on the panel.</long>
         </locale>
       </schema>      
 
@@ -84,7 +84,7 @@
         <default>false</default>
         <locale name="C">
 	  <short>Show the horizontal battery</short>
-          <long>Show the traditional, horizontal battery on the panel</long>
+          <long>Show the traditional, horizontal battery on the panel.</long>
         </locale>
       </schema>      
 
@@ -95,7 +95,7 @@
         <default>0</default>
         <locale name="C">
 	  <short>Show the time/percent label</short>
-          <long>0 for no label, 1 for percentage and 2 for time remaining</long>
+          <long>0 for no label, 1 for percentage and 2 for time remaining.</long>
         </locale>
       </schema>      
 
