@@ -1,3 +1,7 @@
+2008-02-10  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* battstat.schemas.in: Add missing full stops in the long description.
+
 2007-12-02  Changwoo Ryu  <cwryu@debian.org>
 
 	* docs/Makefile.am (DOC_LINGUAS): Added ko.
